Fix bug scrollbar

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -9,6 +9,7 @@
     width: 100%;
     padding: 10px 30px 0;
     background: #fef;
+    height: calc(100vh - 10px);
     .admin-header {
       height: 40px;
       svg {
